[project]
name = "erpnext_fiscal_year_based_date_related_fields"
authors = [
    {name = "Ameen Ahmed (Level Up)", email = "kid1194@gmail.com"}
]
description = "ERPNext plugin that makes date related fields respect the start and end dates of default fiscal year."
requires-python = ">=3.6"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=13.0.0",
    "erpnext>=13.0.0"
]

[project.urls]
Documentation = "https://github.com/kid1194/ERPNext-Fiscal-Year-Based-Date-Related-Fields"
Source = "https://github.com/kid1194/ERPNext-Fiscal-Year-Based-Date-Related-Fields"
